--- a/course-materials/lecture-slides/sections/5.3-choropleth.qmd
+++ b/course-materials/lecture-slides/sections/5.3-choropleth.qmd
@@ -16,13 +16,18 @@ editor_options:
 #..........................load packages.........................
 library(tidyverse)
 library(tigris)
+library(sf)
 
 #.........................get shape data.........................
-county_geo <- tigris::counties(class = "sf", cb = TRUE) |> 
-  shift_geometry()
+county_geo <- tigris::counties(class = "sf", cb = TRUE) |> # cb = TRUE to use cartographic boundary files
+  
+  st_transform(st_crs("ESRI:102003"))
+
+  # shift US to fit AK, HI, PR (we'll be filtering these out though) and transform CRS to USA Contiguous Albers Equal Area Conic (ESRI:102003) ----
+  #shift_geometry()
 
 #....................import precipitation data...................
-precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data", "county-feb19-jan24-precip.csv"), skip = 4)
+precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data", "county-jan20-dec24-precip.csv"), skip = 4)
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                               data wrangling                             ----
@@ -33,11 +38,19 @@ precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data",
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 county_geo_wrangled <- county_geo |>
+  
+  # clean up col names ----
   janitor::clean_names() |>
+  
+  # rename county & state cols ----
   rename(county = namelsad, state = state_name) |>
+  
+  # remove states / territories that we don't have precip data for ----
   filter(!state %in% c("Alaska", "Hawaii", "District of Columbia",
                        "United States Virgin Islands", "Puerto Rico", "American Samoa",
                        "Commonwealth of the Northern Mariana Islands", "Guam")) |>
+  
+  # capitalize "city" (VA) ----
   mutate(county = str_replace(string = county, pattern = " city", replacement = " City"))
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -45,20 +58,34 @@ county_geo_wrangled <- county_geo |>
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 precip_wrangled <- precip_data |>
+  
+  # clean up col names ----
   janitor::clean_names() |>
+  
+  # rename county col ----
   rename(county = name) |>
+  
+  # filter out DC ----
   filter(!county %in% c("Washington, D.C.")) |>
+  
+  # update name to match that in county_geo df ----
   mutate(county = str_replace(string = county, pattern = "Dona Ana County", replacement = "Doña Ana County")) |>
+  
+  # coerce precip & 20th centruy avg from chr to numeric ----
   mutate(value = as.numeric(value),
          x1901_2000_mean = as.numeric(x1901_2000_mean)) |>
+  
+  # calculate % change ----
   mutate(perc_change = ((value - x1901_2000_mean)/x1901_2000_mean)*100) |>
+  
+  # select, rename, reorder cols ----
   select(id, state, county, mean_1901_2000 = x1901_2000_mean, precip = value, perc_change, anomaly_1901_2000_base_period)
 
 ##~~~~~~~~~~~~~~~~~~
 ##  ~ join dfs  ----
 ##~~~~~~~~~~~~~~~~~~
 
-# join dfs (see https://github.com/tidyverse/ggplot2/issues/3936 & https://map-rfun.library.duke.edu/032_thematic_mapping_geom_sf.html) -------
+# join dfs (be sure to join precip TO sf object, not the other way around; see https://github.com/tidyverse/ggplot2/issues/3936 & https://map-rfun.library.duke.edu/032_thematic_mapping_geom_sf.html)) -------
 joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled) 
 ```
 
