--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -32,12 +32,12 @@ install.packages("tigris") # for downloading and using Census TIGER/Line shapefi
 ```
 
 ### B. Download data
-
-- [County-level precipitation data (Feb 2019 - Jan 2024) for the contiguous U.S](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202401/60/value){target="_blank"}, made available by [NOAA National Centers for Environmental Information (NCEI)](https://www.ncei.noaa.gov/){target="_blank"} (the download buttons are located just beneath the rendered map -- **choose the CSV option**)
-  - rename the data file as `county-feb19-jan24-precip.csv` and save it to your class repo at the file path: `EDS-240-class-examples/week5/data/county-feb19-jan24-precip.csv`
   
-<!-- - [County-level precipitation data (Jan 2020 - Dec 2024) for the contiguous U.S](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202412/60/value){target="_blank"}, made available by [NOAA National Centers for Environmental Information (NCEI)](https://www.ncei.noaa.gov/){target="_blank"} (the download buttons are located just beneath the rendered map -- **choose the CSV option**) -->
-<!--   - rename the data file as `county-jan20-dec24-precip.csv` and save it to your class repo at the file path: `EDS-240-class-examples/week5/data/county-jan20-dec24-precip.csv` -->
+1. Download [County-level precipitation data (Jan 2020 - Dec 2024) for the contiguous U.S](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202412/60/value){target="_blank"}, made available by [NOAA National Centers for Environmental Information (NCEI)](https://www.ncei.noaa.gov/){target="_blank"} (you do not need to adjust any of the drop down selections; find the download buttons just beneath the rendered map -- **choose the CSV option**)
+    - rename the data file as `county-jan20-dec24-precip.csv` and save it to your class repo at the file path: `EDS-240-class-examples/week5/data/county-jan20-dec24-precip.csv`
+  
+  <!-- - [County-level precipitation data (Feb 2019 - Jan 2024) for the contiguous U.S](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202401/60/value){target="_blank"}, made available by [NOAA National Centers for Environmental Information (NCEI)](https://www.ncei.noaa.gov/){target="_blank"} (the download buttons are located just beneath the rendered map -- **choose the CSV option**) -->
+  <!-- - rename the data file as `county-feb19-jan24-precip.csv` and save it to your class repo at the file path: `EDS-240-class-examples/week5/data/county-feb19-jan24-precip.csv` -->
 
 ### C. Download .qmd templates & review data wrangling code
 
