--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -29,6 +29,7 @@ install.packages("paletteer") # a comprehensive collection of color palettes in 
 install.packages("viridis") # Colorblind-Friendly Color Maps for R
 install.packages("RColorBrewer") # ColorBrewer Palettes
 install.packages("tigris") # for downloading and using Census TIGER/Line shapefiles in R
+install.packages("sf") # provides simple features access in R
 ```
 
 ### B. Download data
