--- a/course-materials/lecture-slides/sections/5.3-choropleth.qmd
+++ b/course-materials/lecture-slides/sections/5.3-choropleth.qmd
@@ -21,18 +21,43 @@ library(sf)
 #.........................get shape data.........................
 county_geo <- tigris::counties(class = "sf", cb = TRUE) |> # cb = TRUE to use cartographic boundary files
   
-  st_transform(st_crs("ESRI:102003"))
+  # transform CRS to USA Contiguous Albers Equal Area Conic ----
+  # see https://gis.stackexchange.com/questions/141580/which-projection-is-best-for-mapping-the-contiguous-united-states
+  sf::st_transform("ESRI:102003")
 
-  # shift US to fit AK, HI, PR (we'll be filtering these out though) and transform CRS to USA Contiguous Albers Equal Area Conic (ESRI:102003) ----
+  # # shift US to fit AK, HI, PR (we'll be filtering these out though) and transform CRS to USA Contiguous Albers Equal Area Conic (ESRI:102003) ----
   #shift_geometry()
 
+#........................double check CRS........................
+# st_crs(county_geo)
+
 #....................import precipitation data...................
-precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data", "county-jan20-dec24-precip.csv"), skip = 4)
+precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data", "county-jan20-dec24-precip.csv"), 
+                        skip = 4) 
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                               data wrangling                             ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      
+# ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# ##  ~ figure out which states to filter out  ----
+# ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# 
+# #........................get state names.........................
+# state_names <- data.frame(state = state.name) # convert the built-in state.names vector to a df
+# county_geo_states <- county_geo |> rename(state = STATE_NAME) |>  distinct(state) # get unique states from county geo data
+# precip_data_states <- precip_data |> janitor::clean_names() |> distinct(state) # get unique states from precip data
+# 
+# #........determine which states are missing / unnecessary........
+# states_missing_from_precip <- anti_join(state_names, precip_data_states) # see which of the 50 states are missing from precip data
+# extra_states_in_precip <- anti_join(precip_data_states, state_names) # see if there are any extra state names in precip data 
+# states_missing_from_geo <- anti_join(state_names, county_geo_states) # see which of the 50 states are missing from county geo data
+# extra_states_in_geo <- anti_join(county_geo_states, state_names) # see if there are any extra  state names in county geo data
+# 
+# #...............join all states and save as vector...............
+# states_to_get_rid_of <- rbind(states_missing_from_precip, extra_states_in_precip, states_missing_from_geo, extra_states_in_geo) |>
+#   pull()
+
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##  ~ wrangle geometries  ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -45,10 +70,13 @@ county_geo_wrangled <- county_geo |>
   # rename county & state cols ----
   rename(county = namelsad, state = state_name) |>
   
-  # remove states / territories that we don't have precip data for ----
-  filter(!state %in% c("Alaska", "Hawaii", "District of Columbia",
-                       "United States Virgin Islands", "Puerto Rico", "American Samoa",
-                       "Commonwealth of the Northern Mariana Islands", "Guam")) |>
+  # keep only 50 US states (minus AK & HI) ----
+  filter(state %in% state.name) |> 
+  filter(!state %in% c("Alaska", "Hawaii")) |> 
+  # filter(!state %in% states_to_get_rid_of)
+  # filter(!state %in% c("Alaska", "Hawaii", "District of Columbia",
+  #                      "United States Virgin Islands", "Puerto Rico", "American Samoa",
+  #                      "Commonwealth of the Northern Mariana Islands", "Guam")) |>
   
   # capitalize "city" (VA) ----
   mutate(county = str_replace(string = county, pattern = " city", replacement = " City"))
@@ -75,7 +103,7 @@ precip_wrangled <- precip_data |>
   mutate(value = as.numeric(value),
          x1901_2000_mean = as.numeric(x1901_2000_mean)) |>
   
-  # calculate % change ----
+  # calculate % change in precip from 20th century avg ----
   mutate(perc_change = ((value - x1901_2000_mean)/x1901_2000_mean)*100) |>
   
   # select, rename, reorder cols ----
@@ -88,6 +116,26 @@ precip_wrangled <- precip_data |>
 # join dfs (be sure to join precip TO sf object, not the other way around; see https://github.com/tidyverse/ggplot2/issues/3936 & https://map-rfun.library.duke.edu/032_thematic_mapping_geom_sf.html)) -------
 joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled) 
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- --- -->
 
