updated file name for NCEI data; changed '' > "" for RColorBrewer fxns; updated fitler statement to remove DC from choropleth wrangling precip data

--- a/course-materials/keys/KEY-lecture5.2-colors.qmd
+++ b/course-materials/keys/KEY-lecture5.2-colors.qmd
@@ -77,13 +77,13 @@ con_color_plot +
 RColorBrewer::display.brewer.all(colorblindFriendly = TRUE)
 
 # preview palette with your number of desired colors ----
-RColorBrewer::display.brewer.pal(n = 3, name = 'Dark2')
+RColorBrewer::display.brewer.pal(n = 3, name = "Dark2")
 
 # print the HEX codes of your palette ----
-RColorBrewer::brewer.pal(n = 3, name = 'Dark2')
+RColorBrewer::brewer.pal(n = 3, name = "Dark2")
 
 # or save hex codes as a vector ----
-my_brewer_pal <- RColorBrewer::brewer.pal(n = 3, name = 'Dark2')
+my_brewer_pal <- RColorBrewer::brewer.pal(n = 3, name = "Dark2")
 ```
 
 <!-- Omitting this for now -->
