--- a/course-materials/lecture-slides/lecture5.2-colors-slides.qmd
+++ b/course-materials/lecture-slides/lecture5.2-colors-slides.qmd
@@ -661,7 +661,7 @@ Preview a palette with your number of desired colors:
 #| echo: true
 #| fig-align: "center"
 #| out-width: "100%"
-RColorBrewer::display.brewer.pal(n = 4, name = 'Dark2')
+RColorBrewer::display.brewer.pal(n = 4, name = "Dark2")
 ```
 
 :::
@@ -676,7 +676,7 @@ Print the HEX codes of your palette:
 #| echo: true
 #| fig-align: "center"
 #| out-width: "100%"
-RColorBrewer::brewer.pal(n = 4, name = 'Dark2')
+RColorBrewer::brewer.pal(n = 4, name = "Dark2")
 ```
 
 :::
@@ -688,11 +688,11 @@ RColorBrewer::brewer.pal(n = 4, name = 'Dark2')
 #| eval: false
 #| echo: true
 # preview palette with your number of desired colors ----
-RColorBrewer::display.brewer.pal(n = 7, name = 'Dark2')
+RColorBrewer::display.brewer.pal(n = 7, name = "Dark2")
 display.brewer.pal(n = brewer.pal.info["Dark2", "maxcolors"], name = "Dark2") # alternatively
 
 # print the HEX codes of your palette ----
-all_cols <- RColorBrewer::brewer.pal(n = 7, name = 'Dark2')
+all_cols <- RColorBrewer::brewer.pal(n = 7, name = "Dark2")
 
 # select just desired colors ----
 selected_colors <- all_cols[c(1, 7)]
