--- a/course-materials/keys/KEY-lecture5.3-choropleth.qmd
+++ b/course-materials/keys/KEY-lecture5.3-choropleth.qmd
@@ -38,7 +38,7 @@ county_geo <- tigris::counties(class = "sf", cb = TRUE) |> # cb = TRUE to use ca
   sf::st_transform("ESRI:102003")
 
 #....................import precipitation data...................
-precip_data <- read_csv(here::here("week5", "data", "county-jan20-dec24-precip.csv"), 
+precip_data <- read_csv(here::here("week5", "data", "NCEI-county-jan20-dec24-precip.csv"), 
                         skip = 4)
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -76,8 +76,8 @@ precip_wrangled <- precip_data |>
   # rename county col ----
   rename(county = name) |>
   
-  # filter out DC ----
-  filter(!county %in% c("Washington, D.C.")) |>
+  # keep only US states (this will filter out DC) ----
+  filter(state %in% state.name) |> 
   
   # update county name so that it matches the spelling in `county_geo` df ----
   mutate(county = str_replace(string = county, pattern = "Dona Ana County", replacement = "Doña Ana County")) |>
@@ -132,10 +132,10 @@ base_map
 #| eval: true
 #| echo: true
 # preview palette ----
-RColorBrewer::display.brewer.pal(n = 11, name = 'BrBG')
+RColorBrewer::display.brewer.pal(n = 11, name = "BrBG")
 
 # save HEX codes as vector ----
-my_brew_palette11 <- RColorBrewer::brewer.pal(n = 11, name = 'BrBG')
+my_brew_palette11 <- RColorBrewer::brewer.pal(n = 11, name = "BrBG")
 ```
 
 - build map
@@ -159,10 +159,10 @@ base_map +
 #| eval: true
 #| echo: true
 # preview palette ----
-RColorBrewer::display.brewer.pal(n = 10, name = 'BrBG')
+RColorBrewer::display.brewer.pal(n = 10, name = "BrBG")
 
 # save HEX codes as vector ----
-my_brew_palette10 <- RColorBrewer::brewer.pal(n = 10, name = 'BrBG')
+my_brew_palette10 <- RColorBrewer::brewer.pal(n = 10, name = "BrBG")
 ```
 
 - build map
