--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -43,9 +43,9 @@ install.packages("googlesheets4") # provides an R interface to Google Sheets via
 
 ### B. Download Font Awesome fonts
 
-We'll learn how to use [Font Awesome](https://fontawesome.com/) icons in our ggplots. To do so, you'll need to download the Font Awesome font files and save them to your class repo. Do so by following these steps:
+We'll learn how to use [Font Awesome](https://fontawesome.com/){target="_blank"} icons in our ggplots. To do so, you'll need to download the Font Awesome font files and save them to your class repo. Do so by following these steps:
 
-1. **Download Font Awesome fonts:** Go to <https://fontawesome.com/download> and download the latest release available. Choose the **Free For Desktop** option.
+1. **Download Font Awesome fonts:** Go to [https://fontawesome.com/download](https://fontawesome.com/download){target="_blank"} and download the latest release available. Choose the **Free For Desktop** option.
 2. **Unzip the downloaded file:** You should see a folder inside called `otfs/` -- this contains three `.otf` files (aka OpenType font format files)
 3. **Copy the three `.otf` files to your class repo:** I recommend creating a `fonts/` folder inside your root directory, and dropping all three of them in there (e.g. `~/fonts/*.otf`)
 
@@ -54,7 +54,7 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/) icons in our ggp
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week6/` folder.
 
 2. Review setup / wrangling / base plot code and make note of any questions you might have. Due to time constraints, we won't be live-coding our way through all code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}. Specifically:
-    - Template 6.1 begins where we left off in creating our salary plot (in [lecture 4.1](lecture-slides/lecture4.1-rankings-slides.qmd){target="_blank"}). Review the code under the `## Setup`, `## Wrangle Data` and `## Recreate original plot` sections to re-familiarize yourself.  
+    - Template 6.1 begins where we left off in creating our salary plot (in [lecture 4.1](lecture-slides/lecture4.1-amounts-slides.qmd){target="_blank"}). Review the code under the `## Setup`, `## Wrangle Data` and `## Recreate original plot` sections to re-familiarize yourself.  
     - Template 6.2 includes setup and base plot code for two different visualizations (one using lobster data, another using Mono Lake data). Review the `### Setup` and `### Create base plot` sections for both these visualizations.
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
