--- a/course-materials/keys/KEY-lecture6.1-typography.qmd
+++ b/course-materials/keys/KEY-lecture6.1-typography.qmd
@@ -83,7 +83,7 @@ jobs <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/
 
 ## Wrangle data
 
-See lecture 4.1 slides [#4](../lecture-slides/lecture4.1-rankings-slides.qmd#job-data){target="_blank"}, [#5](../lecture-slides/lecture4.1-rankings-slides.qmd#data-wrangling){target="_blank"}, & [#17](../lecture-slides/lecture4.1-rankings-slides.qmd#dumbbell-plot-subset){target="_blank"} as reminders of where we left off.
+See lecture 4.1 slides [#4](../lecture-slides/lecture4.1-amounts-slides.qmd#job-data){target="_blank"}, [#5](../lecture-slides/lecture4.1-amounts-slides.qmd#data-wrangling){target="_blank"}, [#23](../lecture-slides/lecture4.1-amounts-slides.qmd#dumbbell-plot-subset){target="_blank"} & [#24](../lecture-slides/lecture4.1-amounts-slides.qmd#dumbbell-plot-create){target="_blank"} as reminders of where we left off.
 
 ```{r}
 #| eval: true
@@ -95,7 +95,7 @@ See lecture 4.1 slides [#4](../lecture-slides/lecture4.1-rankings-slides.qmd#job
 
 jobs_clean <- jobs |> 
   
-  # add col with % men in a given occupation (% females in a given occupation was already included) ----
+  # add col with % men in a given occupation (% females in a given occupation is already included) ----
   mutate(percent_male = 100 - percent_female) |>
          
   # rearrange columns ----
@@ -108,10 +108,10 @@ jobs_clean <- jobs |>
   # drop rows with missing earnings data ----
   drop_na(total_earnings_male, total_earnings_female) |> 
   
-  # make occupation a factor (necessary for reordering groups in our plot) ----
+  # make occupation a factor (for reordering groups in our plot) ----
   mutate(occupation = as.factor(occupation)) |> 
  
-  # classify jobs by percentage male or female (these will become facet labels in our plot) ----
+  # classify jobs by percentage male or female (these will become facet labels in our dumbbell plot) ----
   mutate(group_label = case_when(
     percent_female >= 75 ~ "Occupations that are 75%+ female",
     percent_female >= 45 & percent_female <= 55 ~ "Occupations that are 45-55% female",
@@ -125,29 +125,28 @@ jobs_clean <- jobs |>
 #....guarantee the same random samples each time we run code.....
 set.seed(0)
 
-#...............get random samples from each group...............
-
-# 10 random jobs that are 75%+ female (2016) ----
+#.........get 10 random jobs that are 75%+ female (2016).........
 f75 <- jobs_clean |> 
   filter(year == 2016, group_label == "Occupations that are 75%+ female") |> 
   slice_sample(n = 10)
 
-# 10 random jobs that are 75%+ male (2016) ----
+#..........get 10 random jobs that are 75%+ male (2016)..........
 m75 <- jobs_clean |> 
   filter(year == 2016, group_label == "Occupations that are 75%+ male") |> 
   slice_sample(n = 10)
 
-# 10 random jobs that are 45-55%+ female (2016) ----
+#........get 10 random jobs that are 45-55%+ female (2016).......
 f50 <- jobs_clean |> 
   filter(year == 2016, group_label == "Occupations that are 45-55% female") |> 
   slice_sample(n = 10)
 
 #.......combine dfs & relevel factors (for plotting order).......
 subset_jobs <- rbind(f75, m75, f50) |> 
-  mutate(group_label = fct_relevel(group_label, 
+  mutate(group_label = fct_relevel(.f = group_label, 
                                    "Occupations that are 75%+ female", 
                                    "Occupations that are 45-55% female", 
-                                   "Occupations that are 75%+ male")) 
+                                   "Occupations that are 75%+ male"),
+         occupation = fct_reorder(.f = occupation, .x = total_earnings))
 ```
 
 ## Recreate original plot 
@@ -158,19 +157,26 @@ See [lecture 4.1](../lecture-slides/lecture4.1-rankings-slides.qmd#dumbbell-plot
 #| eval: true
 #| echo: true
 #| warning: false
+#| out-width: "100%"
 # recreate original plot ----
 plot <- ggplot(subset_jobs) +
-  geom_segment(aes(x = total_earnings_female, 
-                   xend = total_earnings_male,
-                   y = fct_reorder(occupation, total_earnings), 
-                   yend = occupation)) +
-  geom_point(aes(x = total_earnings_male, y = occupation),
-             color = "#CD93D8", size = 3.25) +
-  geom_point(aes(x = total_earnings_female, y = occupation),
-             color = "#6A1E99", size = 3.25) +
-  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
-  scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
-                     breaks = c(25000, 50000, 75000, 100000, 125000))
+  
+  # create dumbbells ----
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = "#CD93D8", 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = "#6A1E99", 
+             size = 2.5) +
+  
+  # facet wrap by group ----
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") + # "free_y" plots only the axis labels that exist in each group
+  
+  # axis breaks & $ labels ----
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000))
 
 plot
 ```
