--- a/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
+++ b/course-materials/lecture-slides/lecture6.1-typography-slides.qmd
@@ -754,14 +754,6 @@ Let's improve this plot by updating the colors, modifying the theme, and using s
 
 {{< include sections/6.1-dumbbell-original.qmd >}}
 
-```{r}
-#| eval: true
-#| echo: false
-#| fig-align: "center"
-#| out-width: "100%"
-#knitr::include_graphics("images/week6/earnings-plot.png")
-```
-
 ---
 
 ## {#wrangle-data data-menu-title="Wrangle data"} 
@@ -866,7 +858,7 @@ This code was copied from [Lecture 4.1](lecture4.1-amounts-slides.qmd){target="_
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 # initialize plot (we'll map our aesthetics locally for each geom, below) ----
-plot <- ggplot(subset_jobs) +
+ggplot(subset_jobs) +
   
   # create dumbbells ----
   geom_linerange(aes(y = occupation,
@@ -884,8 +876,6 @@ plot <- ggplot(subset_jobs) +
   # axis breaks & $ labels ----
   scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
                      breaks = c(25000, 50000, 75000, 100000, 125000))
-
-plot
 ```
 
 ---
@@ -960,7 +950,7 @@ monochromeR::view_palette(earnings_pal)
 #| fig-align: "center"
 #| out-width: "100%"
 #| code-line-numbers: "5,8"
-plot <- ggplot(subset_jobs) +
+ggplot(subset_jobs) +
   geom_linerange(aes(y = occupation,
                      xmin = total_earnings_female, xmax = total_earnings_male)) + 
   geom_point(aes(x = total_earnings_male, y = occupation), 
@@ -972,8 +962,6 @@ plot <- ggplot(subset_jobs) +
   facet_wrap(~group_label, nrow = 3, scales = "free_y") +
   scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
                      breaks = c(25000, 50000, 75000, 100000, 125000))
-
-plot
 ```
 
 ---
@@ -994,7 +982,7 @@ Resulting plot is rendered on the next slide!
 #| fig-align: "center"
 #| out-height: "100%"
 #| code-line-numbers: "13-35"
-plot <- ggplot(subset_jobs) +
+ggplot(subset_jobs) +
   geom_linerange(aes(y = occupation,
                      xmin = total_earnings_female, xmax = total_earnings_male)) + 
   geom_point(aes(x = total_earnings_male, y = occupation), 
@@ -1029,8 +1017,6 @@ plot <- ggplot(subset_jobs) +
                              color = earnings_pal["light_text"]),
     axis.title = element_blank()
   )
-
-plot
 ```
 
 ::: {.footer}
@@ -1049,7 +1035,7 @@ plot
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-plot <- ggplot(subset_jobs) +
+ggplot(subset_jobs) +
   geom_linerange(aes(y = occupation,
                      xmin = total_earnings_female, xmax = total_earnings_male)) + 
   geom_point(aes(x = total_earnings_male, y = occupation), 
@@ -1068,9 +1054,9 @@ plot <- ggplot(subset_jobs) +
   theme(
     plot.title.position = "plot",
     plot.title = element_text(face = "bold",
-                              size = 18,
+                              size = 19, # 18
                               color = earnings_pal["dark_text"]),
-    plot.subtitle = element_text(size = 11.5,
+    plot.subtitle = element_text(size = 14, #11.5
                                  color = earnings_pal["light_text"],
                                  margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = element_text(face = "italic",
@@ -1084,8 +1070,6 @@ plot <- ggplot(subset_jobs) +
                              color = earnings_pal["light_text"]),
     axis.title = element_blank()
   )
-
-plot
 ```
 
 ---
@@ -1202,8 +1186,19 @@ Resulting plot is rendered on the next slide!
 ```{r}
 #| eval: false
 #| echo: true
-#| code-line-numbers: "8,12,16,17,20,25"
-updated_plot <- plot +
+#| code-line-numbers: "19,23,27,31,36"
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = "Median earnings of full-time male vs. female workers by occupation in 2016",
        caption = "Data Source: TidyTuesday (March 5, 2019)") +
@@ -1219,7 +1214,7 @@ updated_plot <- plot +
                                  color = earnings_pal["light_text"],
                                  margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = element_text(family = "sen",
-                                face = "italic", # NOTE: this no longer applies since the typeface "Sen" does not exist in an italic font style
+                                face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
@@ -1232,8 +1227,6 @@ updated_plot <- plot +
                              color = earnings_pal["light_text"]),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 
 ::: {.footer}
@@ -1252,7 +1245,18 @@ updated_plot
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-updated_plot <- plot +
+plot <- ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = "Median earnings of full-time male vs. female workers by occupation in 2016",
        caption = "Data Source: TidyTuesday (March 5, 2019)") +
@@ -1261,28 +1265,28 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 25,
+                              size = 19, # 18
                               color = earnings_pal["dark_text"]),
     plot.subtitle = element_text(family = "sen",
-                                 size = 17,
+                                 size = 14, # 11.5
                                  color = earnings_pal["light_text"],
                                  margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = element_text(family = "sen",
-                                face = "italic", # NOTE: this no longer applies since the typeface "Sen" does not exist in an italic font style
+                                face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
-                                size = 12,
+                                size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(x = 1, "lines"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
+                             size = 9,
                              color = earnings_pal["light_text"]),
-    axis.text.x = element_text(size = 10),
     axis.title = element_blank()
   )
 
-updated_plot
+plot
 ```
 
 ---
@@ -1410,8 +1414,19 @@ Resulting plot is rendered on the next slide!
 ```{r}
 #| eval: false
 #| echo: true
-#| code-line-numbers: "3-4"
-updated_plot <- plot +
+#| code-line-numbers: "14,15"
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
@@ -1420,27 +1435,26 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 18),
+                              size = 18,
+                              color = earnings_pal["dark_text"]),
     plot.subtitle = element_text(family = "sen",
                                  size = 11.5,
                                  color = earnings_pal["light_text"],
                                  margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = element_text(family = "sen",
-                                face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
                                 size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(0.5, "cm"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
                              color = earnings_pal["light_text"]),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 
 ---
@@ -1455,7 +1469,18 @@ updated_plot
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-updated_plot <- plot +
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
@@ -1464,27 +1489,26 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 25),
+                              size = 19, # 18
+                              color = earnings_pal["dark_text"]),
     plot.subtitle = element_text(family = "sen",
-                                 size = 17,
+                                 size = 14, # 11.5
                                  color = earnings_pal["light_text"],
                                  margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = element_text(family = "sen",
-                                face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                face = "italic",
                                 color = earnings_pal["light_text"],
                                 margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
-                                size = 12,
+                                size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(1, "lines"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
+                             size = 9,
                              color = earnings_pal["light_text"]),
-    axis.text.x = element_text(size = 10),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 
 ---
@@ -1523,8 +1547,19 @@ There are a few options, all which replace `{ggplot2}`'s  `element_text()` -- be
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-#| code-line-numbers: "11,15,18,19"
-updated_plot <- plot +
+#| code-line-numbers: "23,27"
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
@@ -1533,13 +1568,14 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 18),
+                              size = 18,
+                              color = earnings_pal["dark_text"]),
     plot.subtitle = ggtext::element_textbox(family = "sen",
                                             size = 11.5,
                                             color = earnings_pal["light_text"],
                                             margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = ggtext::element_textbox(family = "sen",
-                                           face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                           face = "italic",
                                            color = earnings_pal["light_text"],
                                            halign = 1, 
                                            lineheight = 1.5,
@@ -1548,15 +1584,12 @@ updated_plot <- plot +
                                 face = "bold",
                                 size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(0.5, "cm"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
                              size = 9,
                              color = earnings_pal["light_text"]),
-    #axis.text.x = element_text(size = 10),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 
 ::: {.center-text}
@@ -1575,8 +1608,18 @@ updated_plot
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-#| code-line-numbers: "11,15,18,19"
-updated_plot <- plot +
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
@@ -1585,36 +1628,35 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 25),
+                              size = 19, # 18
+                              color = earnings_pal["dark_text"]),
     plot.subtitle = ggtext::element_textbox(family = "sen",
-                                            size = 17,
+                                            size = 14, # 11.5
                                             color = earnings_pal["light_text"],
                                             margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = ggtext::element_textbox(family = "sen",
-                                           face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
+                                           face = "italic",
                                            color = earnings_pal["light_text"],
                                            halign = 1, 
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
-                                size = 12,
+                                size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(1, "lines"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
+                             size = 9,
                              color = earnings_pal["light_text"]),
-    axis.text.x = element_text(size = 10),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 
 ---
 
 ## {#text-legend data-menu-title="Add legend"} 
 
-[We also need to tell reader what our colors mean!]{.slide-title2}
+[We also need to tell readers what our colors mean!]{.slide-title2}
 
 <hr>
 
@@ -1624,7 +1666,7 @@ Rather than a traditional legend, let's **color-code our subtitle text (i.e. [ma
 
 . . . 
 
-We already have the correct `theme()` elements added to our plot, but we do need to **update our subtitle text with Markdown and HTML styling**. Let's bold, color, and make these words slightly larger than the surrounding text:
+We already have the correct `theme()` elements added to our plot, but we do need to **update our subtitle text with Markdown and HTML styling**. Let's bold and color the words "male" and "female":
 
 ```{r}
 #| eval: true
@@ -1633,9 +1675,8 @@ We already have the correct `theme()` elements added to our plot, but we do need
 #........................create subtitle.........................
 money_icon <- "&#xf3d1"
 
-subtitle <- glue::glue("Median earnings 
-                       <span style='font-family:fa-regular;'>{money_icon};</span>
-                       of full-time
+subtitle <- glue::glue("<span style='font-family:fa-regular;'>{money_icon};</span>
+                       Median earnings of full-time
                        <span style='color:#2D7787;'>**male**</span> 
                        versus 
                        <span style='color:#FC6B4B;'>**female**</span>
@@ -1658,7 +1699,18 @@ subtitle <- glue::glue("Median earnings
 #| fig-align: "center"
 #| fig-asp: 0.7
 #| out-height: "100%"
-updated_plot <- plot +
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
@@ -1667,29 +1719,28 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 25), 
-    plot.subtitle = ggtext::element_textbox_simple(family = "sen",
-                                 size = 17,
-                                 color = earnings_pal["light_text"],
-                                 margin = margin(t = 2, r = 0, b = 6, l = 0)),
+                              size = 19, # 18
+                              color = earnings_pal["dark_text"]),
+    plot.subtitle = ggtext::element_textbox(family = "sen",
+                                            size = 14, # 11.5
+                                            color = earnings_pal["light_text"],
+                                            margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = ggtext::element_textbox(family = "sen",
-                                face = "italic", # NOTE: this no longer applies since the typeface "sen" does not exist in an italic font style
-                                color = earnings_pal["light_text"],
-                                halign = 1, 
-                                lineheight = 1.5,
-                                margin = margin(t = 15, r = 0, b = 0, l = 0)),
+                                           face = "italic",
+                                           color = earnings_pal["light_text"],
+                                           halign = 1, 
+                                           lineheight = 1.5,
+                                           margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
-                                size = 12,
+                                size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(1, "lines"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
+                             size = 9,
                              color = earnings_pal["light_text"]),
-    axis.text.x = element_text(size = 10),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 
 ---
@@ -1711,17 +1762,18 @@ updated_plot
 #| fig-align: "center"
 #| fig-asp: 0.9
 #| out-height: "100%"
+# initialize plot (we'll map our aesthetics locally for each geom, below) ----
 ggplot(subset_jobs) +
-  geom_segment(aes(x = total_earnings_female, 
-                   xend = total_earnings_male,
-                   y = fct_reorder(occupation, total_earnings), 
-                   yend = occupation)) +
-  geom_point(aes(x = total_earnings_male, y = occupation),
-             color = "#CD93D8", size = 3.25) +
-  geom_point(aes(x = total_earnings_female, y = occupation),
-             color = "#6A1E99", size = 3.25) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = "#CD93D8", 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = "#6A1E99", 
+             size = 2.5) +
   facet_wrap(~group_label, nrow = 3, scales = "free_y") +
-  scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
                      breaks = c(25000, 50000, 75000, 100000, 125000))
 ```
 
@@ -1734,7 +1786,18 @@ ggplot(subset_jobs) +
 #| fig-align: "center"
 #| fig-asp: 0.9
 #| out-height: "100%"
-updated_plot <- plot +
+ggplot(subset_jobs) +
+  geom_linerange(aes(y = occupation,
+                     xmin = total_earnings_female, xmax = total_earnings_male)) + 
+  geom_point(aes(x = total_earnings_male, y = occupation), 
+             color = earnings_pal["males"], 
+             size = 2.5) +
+  geom_point(aes(x = total_earnings_female, y = occupation), 
+             color = earnings_pal["females"], 
+             size = 2.5) +
+  facet_wrap(~group_label, nrow = 3, scales = "free_y") +
+  scale_x_continuous(labels = scales::label_currency(scale = 0.001, suffix = "k"),
+                     breaks = c(25000, 50000, 75000, 100000, 125000)) +
   labs(title = "Males earn more than females across most occupations",
        subtitle = subtitle,
        caption = caption) +
@@ -1743,29 +1806,28 @@ updated_plot <- plot +
     plot.title.position = "plot",
     plot.title = element_text(family = "josefin",
                               face = "bold",
-                              size = 25),
+                              size = 19, # 18
+                              color = earnings_pal["dark_text"]),
     plot.subtitle = ggtext::element_textbox(family = "sen",
-                                            size = 15,
+                                            size = 14, # 11.5
                                             color = earnings_pal["light_text"],
                                             margin = margin(t = 2, r = 0, b = 6, l = 0)),
     plot.caption = ggtext::element_textbox(family = "sen",
-                                           face = "italic", 
+                                           face = "italic",
                                            color = earnings_pal["light_text"],
                                            halign = 1, 
                                            lineheight = 1.5,
                                            margin = margin(t = 15, r = 0, b = 0, l = 0)),
     strip.text.x = element_text(family = "josefin",
                                 face = "bold",
-                                size = 12,
+                                size = 10,
                                 hjust = 0),
-    panel.spacing.y = unit(1, "lines"),
+    panel.spacing.y = unit(x = 0.5, "cm"),
     axis.text = element_text(family = "sen",
+                             size = 9,
                              color = earnings_pal["light_text"]),
-    axis.text.x = element_text(size = 10),
     axis.title = element_blank()
   )
-
-updated_plot
 ```
 :::
 
@@ -1784,10 +1846,10 @@ updated_plot
 ```{r}
 #| eval: false
 #| echo: true
-# save plot using ggsave ----
+# write plot to file (aka save as png) ----
 ggsave(
   filename = here::here("week6", "images", "salary_plot.png"),
-  plot = updated_plot,
+  plot = last_plot(), # otherwise, save your plot as an object, and pass the `plot` argument your plot object name
   device = "png",
   width = 8, 
   height = 7,
