--- a/course-materials/lecture-slides/sections/6.1-dumbbell-original.qmd
+++ b/course-materials/lecture-slides/sections/6.1-dumbbell-original.qmd
@@ -7,6 +7,8 @@ editor_options:
 ```{r}
 #| eval: true
 #| echo: false
+#| warning: false
+#| message: false
 #| out-width: "100%"
 #| fig-align: "center"
 
