--- a/course-materials/discussion/week6/week6-slides.qmd
+++ b/course-materials/discussion/week6/week6-slides.qmd
@@ -57,8 +57,8 @@ However, when we tried saving our plot as a PNG file using `ggsave()`, we got so
 #| eval: false 
 #| echo: true
 ggsave(
-  filename = here::here("week6", "images", "salary_plot.png"),
-  plot = updated_plot,
+  filename = here::here("week6", "images", "final-plot.png"),
+  plot = final_plot, 
   device = "png",
   width = 8, 
   height = 7,
